ajustes finais da barra de pesquisa